--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -11,13 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/step_bind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/step_bind"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/qrcode_hint"
@@ -31,32 +32,35 @@
         android:id="@+id/qrcode_key"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/hint_layer" />
+        android:layout_below="@id/hint_layer"
+        android:gravity="center_horizontal"
+        android:textColor="@color/colorTextGray"/>
 
     <ImageView
         android:id="@+id/qrcode"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
+
         <Button
             android:id="@+id/skip"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/skip"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/system_setting"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="系统设置"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
     </LinearLayout>
 </RelativeLayout>
