--- a/app/src/main/res/layout/audioenter_activity_audiorecommend.xml
+++ b/app/src/main/res/layout/audioenter_activity_audiorecommend.xml
@@ -20,16 +20,18 @@
         android:gravity="center_vertical"
         >
 
-        <ImageView
+        <LinearLayout
             android:id="@+id/iv_backhome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="20dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/back_home"/>
-
+            android:layout_width="80dp"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/back_home"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tag_name"
