--- a/app/src/main/res/layout/audioenter_fragment_album_detail.xml
+++ b/app/src/main/res/layout/audioenter_fragment_album_detail.xml
@@ -36,21 +36,19 @@
 
 
         <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swiperefresh_album"
+            android:id="@+id/swiperefresh_playlist"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
 
-
             <android.support.v7.widget.RecyclerView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-
                 android:id="@+id/rv_album_playlist"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:dividerHeight="20dp"
-                />
+                android:scrollbars="vertical"/>
         </android.support.v4.widget.SwipeRefreshLayout>
+
 
     </LinearLayout>
 </RelativeLayout>
