--- a/app/src/main/res/layout/audioenter_play_control.xml
+++ b/app/src/main/res/layout/audioenter_play_control.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:homest="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+             xmlns:homest="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
              android:layout_height="@dimen/bottom_bar_size"
              android:layout_alignParentBottom="true"
              android:background="@color/bottomSheetNormalBackground">
