--- a/mediaservice/src/main/res/layout/activity_main.xml
+++ b/mediaservice/src/main/res/layout/activity_main.xml
@@ -3,7 +3,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
-
+<EditText
+    android:layout_width=""
+    android:layout_height=""/>
     <Button
         android:id="@+id/switchfrag_button"
         android:layout_width="wrap_content"
