--- a/app/src/main/res/layout/audioenter_activity_play.xml
+++ b/app/src/main/res/layout/audioenter_activity_play.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:homest="http://schemas.android.com/apk/res-auto"
+                xmlns:homest="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    <ProgressBar
+        android:id="@+id/top_progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
 
     <RelativeLayout
         android:id="@+id/play_actionbar"
@@ -22,7 +27,7 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="20dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/back" />
+            android:src="@drawable/back"/>
 
 
         <TextView
@@ -32,7 +37,7 @@
             android:gravity="center"
             android:text="@string/index_music"
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/list_item_text_size_big" />
+            android:textSize="@dimen/list_item_text_size_big"/>
 
     </RelativeLayout>
 
@@ -54,7 +59,7 @@
                 android:max="100"
                 android:progressDrawable="@drawable/play_seekbar"
                 android:secondaryProgress="0"
-                android:thumb="@drawable/play_plybar_btn" />
+                android:thumb="@drawable/play_plybar_btn"/>
 
             <TextView
                 android:id="@+id/tv_play_currenttime"
@@ -63,7 +68,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@id/play_seek"
                 android:text="00:00:00"
-                android:textColor="@color/colorWhite" />
+                android:textColor="@color/colorWhite"/>
 
             <TextView
                 android:id="@+id/tv_play_totaltime"
@@ -72,7 +77,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@id/play_seek"
                 android:text="00:00:00"
-                android:textColor="@color/colorWhite" />
+                android:textColor="@color/colorWhite"/>
         </RelativeLayout>
 
         <RelativeLayout
@@ -86,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 homest:imagesrc="@drawable/player_play"
-                homest:text="@string/play" />
+                homest:text="@string/play"/>
 
             <com.ragentek.homeset.audiocenter.view.widget.ImageWithText
                 android:id="@+id/image_play_pre"
@@ -96,7 +101,7 @@
                 android:layout_marginEnd="@dimen/play_control_margin"
                 android:layout_toStartOf="@id/image_playorpause"
                 homest:imagesrc="@drawable/pre"
-                homest:text="@string/play_pre" />
+                homest:text="@string/play_pre"/>
 
 
             <com.ragentek.homeset.audiocenter.view.widget.ImageWithText
@@ -107,7 +112,7 @@
                 android:layout_marginStart="@dimen/play_control_margin"
                 android:layout_toEndOf="@id/image_playorpause"
                 homest:imagesrc="@drawable/next"
-                homest:text="@string/play_next" />
+                homest:text="@string/play_next"/>
 
 
             <com.ragentek.homeset.audiocenter.view.widget.ImageWithText
@@ -118,7 +123,7 @@
                 android:layout_marginEnd="@dimen/play_control_margin"
                 android:layout_toStartOf="@id/image_play_pre"
                 homest:imagesrc="@drawable/control_unfav"
-                homest:text="@string/my_favoriate" />
+                homest:text="@string/my_favoriate"/>
 
             <com.ragentek.homeset.audiocenter.view.widget.ImageWithText
                 android:id="@+id/image_play_list"
@@ -128,7 +133,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/play_control_margin"
                 homest:imagesrc="@drawable/play_list"
-                homest:text="@string/play_list" />
+                homest:text="@string/play_list"/>
 
             <com.ragentek.homeset.audiocenter.view.widget.ImageWithText
                 android:id="@+id/image_play_mode"
@@ -139,7 +144,7 @@
                 android:layout_toStartOf="@id/image_play_list"
                 android:visibility="gone"
                 homest:imagesrc="@drawable/cycle"
-                homest:text="@string/play_mode" />
+                homest:text="@string/play_mode"/>
         </RelativeLayout>
     </FrameLayout>
 
@@ -150,6 +155,6 @@
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_bar"
         android:layout_below="@id/play_actionbar"
-        android:orientation="horizontal" />
+        android:orientation="horizontal"/>
 
 </RelativeLayout>
